--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,8 +3,9 @@
 %html
   %head
     %meta{'http-equiv' => 'content',:content => 'text/html; charset=utf-8'}
-    %script{:type => 'text/javascript',:language => 'JavaScript',:src => '/js/prototype.js'}
-    %link{:type => 'text/css',:rel => 'stylesheet',:href => '/css/common.css'}
+    = javascript_include_tag 'prototype'
+    = stylesheet_link_tag 'common'
+    %title= write_title
   %body
     #header.navi
       %h1 Something fun @cowplace
