colorize sort and add profile

--- a/views/index.haml
+++ b/views/index.haml
@@ -3,6 +3,7 @@
 - content_for :navigation do
   = breadcrumb_list([:top])
 - content_for :leftbar do
+  %p please select topics
   %ul
     %li
       %a{:href => :profile} profile
