--- a/views/sass/sort.sass
+++ b/views/sass/sort.sass
@@ -1,5 +1,13 @@
 #main
-  .bar 
-    :border 1pt solid black
+  .bar
+    :border 2pt solid gray
+    :margin 1px
+    :padding 0px
+  .base
+    :border 2pt solid red
+    :margin 1px
+    :padding 0px
+  .comp
+    :border 2pt solid blue
     :margin 1px
     :padding 0px
