--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,8 +1,8 @@
-!!! XML
 !!!
 %html
   %head
     %meta{'http-equiv' => 'content',:content => 'text/html; charset=utf-8'}
+    %link{:rel => 'shortcut icon', :href => "favicon.ico", :type => "image/x-icon"}
     = javascript_include_tag 'prototype'
     = stylesheet_link_tag 'common'
     != yield_content :header
