--- a/views/sort.haml
+++ b/views/sort.haml
@@ -1,5 +1,5 @@
 - content_for :header do
-  = javascript_include_tag 'exsort'
+  = javascript_include_tag 'sort'
   = stylesheet_link_tag 'sort'
 - content_for :title do
   %title= title_with_name('visualized sorting algorithm')
