--- a/views/index.haml
+++ b/views/index.haml
@@ -9,3 +9,5 @@
       %a{:href => :profile} profile
     %li
       %a{:href => :visualized_sorting_algorithm} sorting
+    %li
+      %a{:href => :multi_particles} particles
