modified multi particles

--- a/views/multi_particles.haml
+++ b/views/multi_particles.haml
@@ -13,4 +13,4 @@
     <button onclick="init();">Start</button>
 
 %div
-  <canvas width="800" height="400"></canvas>
+  <canvas id="canvas"  width="800" height="400"></canvas>
