modified multi particles

--- a/views/multi_particles.haml
+++ b/views/multi_particles.haml
@@ -17,4 +17,4 @@
         %li
           %a{:href => '#', :onclick => "init('#{kind}');"}= kind
 
-%div{:id => 'canvas_field'}
+%div{:id => 'stage'}
