--- a/views/index.haml
+++ b/views/index.haml
@@ -11,3 +11,5 @@
       %a{:href => :visualized_sorting_algorithm} sorting
     %li
       %a{:href => :multi_particles} particles
+    %li
+      %a{:href => :visualized_list} list
