modified sass to ie

--- a/views/sass/sort.sass
+++ b/views/sass/sort.sass
@@ -1,10 +1,11 @@
 #main
   .bar
-    :font-size 2pt
-    :border 2pt solid gray
+    :height 3pt
+    :font-size 1pt
+    :background-color gray
     :margin 1px
     :padding 0px
   .base
-    :border 2pt solid red
+    :background-color red
   .comp
-    :border 2pt solid blue
+    :background-color blue
