modified some names

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,7 +11,7 @@
     #header.navi
       %h1 something fun @cowplace
     #navigation.navi
-      != yield_content :navigation
+      != @navi
     #leftbar.navi
       != yield_content :leftbar
     #wrapper
