--- a/views/index.haml
+++ b/views/index.haml
@@ -1,12 +1,10 @@
 - content_for :title do
   %title= title_with_name
-- content_for :navigation do
-  = breadcrumb_list([:top])
 - content_for :leftbar do
   %p please select topics
   %ul
     %li
-      %a{:href => :profile} profile
+      %a{:href => :author} author
     %li
       %a{:href => :visualized_sorting_algorithm} sorting
     %li
