--- a/views/index.haml
+++ b/views/index.haml
@@ -13,3 +13,5 @@
       %a{:href => :visualized_list} list
     %li
       %a{:href => :visualized_structure} structure
+    %li
+      %a{:href => :life} life
