--- a/views/graphics.haml
+++ b/views/graphics.haml
@@ -4,18 +4,18 @@
     = javascript_include_tag 'excanvas'
     = javascript_include_tag 'processing_init'
     %script{:id => @kind, :type => 'application/processing'}
+      = `cat views/processing/lines.processing`
       = `cat views/processing/#{@kind}.processing`
-      = `cat views/processing/ball.processing`
     %script{:type => 'text/javascript'}
       = "window.onload = function(){init('#{@kind}');};"
 - content_for :title do
-  %title= title_with_name('multi particles')
+  %title= title_with_name('graphics')
 - content_for :leftbar do
   %p please push to start
   %div
     %ul
       - @kinds.each do |kind|
         %li
-          %a{:href => "/multi_particles/#{kind}"}= kind
+          %a{:href => "/graphics/#{kind}"}= kind
 
 %div{:id => 'stage'}
