--- a/views/station.haml
+++ b/views/station.haml
@@ -7,12 +7,19 @@
       size(800,800); |
       background(255); |
       fill(0); |
-    - @kinds.each do |station|
+    - @stations.each do |station|
       = "point(#{station.lon}, #{station.lat});"
     }
   %script{:type => 'text/javascript'}
     = "window.onload = function(){init('#{@kind}');};"
 - content_for :title do
   %title= title_with_name('station')
+- content_for :leftbar do
+  %p please push to start
+  %div
+    %ul
+      - @kinds.each do |kind|
+        %li
+          %a{:href => "/station/#{kind}"}= kind
 
 %div{:id => 'stage'}
