--- a/views/station.haml
+++ b/views/station.haml
@@ -9,6 +9,10 @@
       fill(0); |
     - @stations.each do |station|
       = "point(#{station.lon}, #{station.lat});"
+    - @stations.each do |from|
+      - @station.each do |to|
+        - if from.adjs.include?(to.id)
+          = "line(#{from.lon}, #{from.lat}, #{to.lon}, #{to.lat})"
     }
   %script{:type => 'text/javascript'}
     = "window.onload = function(){init('#{@kind}');};"
