--- a/views/sass/lattice.sass
+++ b/views/sass/lattice.sass
@@ -5,6 +5,5 @@
     :padding 0px
   td
     :height 128px
-    :width 96px
-  .alive
-    :background-color black
+    :width 128px
+    :text-align center
