--- a/views/sass/lattice.sass
+++ b/views/sass/lattice.sass
@@ -7,3 +7,21 @@
     :height 128px
     :width 128px
     :text-align center
+  .bubble
+    :position absolute
+    :border-left 5px solid black
+    :border-top 5px solid transparent
+    :-border-top-color white
+  .description
+    :float left
+    :padding 5px 10px
+    :margin 0 0 0 -15px
+    :border 3px solid black
+    :border-radius 6px
+    :-moz-border-radius 6px
+    :-webkit-border-radius 6px
+    :background white
+    :font bold 15px/1.2 "Chalkboard", "Comic Sans MS", cursive
+    :text-align center
+    :color black
+    :-position relative
