move scripts from header to footer

--- a/views/graphics.haml
+++ b/views/graphics.haml
@@ -1,5 +1,5 @@
 - unless @kind.nil? then
-  - content_for :header do
+  - content_for :scripts do
     = javascript_include_tag 'processing'
     = javascript_include_tag 'excanvas'
     = javascript_include_tag 'processing_init'
