--- a/views/life.haml
+++ b/views/life.haml
@@ -1,5 +1,6 @@
 - content_for :header do
   = stylesheet_link_tag 'life'
+- content_for :scripts do
   = javascript_include_tag 'life'
 - content_for :title do
   %title= title_with_name('life game')
