--- a/views/station.haml
+++ b/views/station.haml
@@ -1,4 +1,4 @@
-- content_for :header do
+- content_for :scripts do
   = javascript_include_tag 'processing'
   = javascript_include_tag 'excanvas'
   = javascript_include_tag 'processing_init'
