--- a/views/field.haml
+++ b/views/field.haml
@@ -1,4 +1,8 @@
-- content_for :header do
+- content_for :title do
+  %title= title_with_name('feild')
+- content_for :leftbar do
+  %p please push to locate
+- content_for :scripts do
   = javascript_include_tag 'processing'
   = javascript_include_tag 'excanvas'
   = javascript_include_tag 'processing_init'
@@ -6,9 +10,6 @@
     = `cat views/processing/#{@kind}.processing`
   %script{:type => 'text/javascript'}
     = "window.onload = function(){init('#{@kind}');};"
-- content_for :title do
-  %title= title_with_name('feild')
-- content_for :leftbar do
-  %p please push to locate
+  
 
 %div{:id => 'stage'}
