--- a/views/layout.haml
+++ b/views/layout.haml
@@ -21,5 +21,6 @@
     #footer.navi
       %p copyleft (c) 2010 cowplace all rights reversed.
     #scripts
-      = javascript_include_tag 'prototype'
+      //= javascript_include_tag 'prototype'
+      = javascript_include_tag 'jquery-1.5.1.min'
       != yield_content :scripts
