--- a/views/life.haml
+++ b/views/life.haml
@@ -9,8 +9,8 @@
 
 %table
   %tbody
-    - 60.times do |i|
+    - 80.times do |i|
       %tr
         - 150.times do |j|
-          %td{:id => "#{i}-#{j}", :class => 'none'}
+          %td{:id => "#{i}-#{j}", :class => 'cell'}
 
