--- a/views/station.haml
+++ b/views/station.haml
@@ -7,8 +7,14 @@
       size(800,800); |
       background(255); |
       fill(0); |
-    - @stations.each do |station|
-      = "point(#{station.lon}, #{station.lat});"
+    - if @rails.nil? then
+      - @stations.each do |station|
+        = "point(#{station.lon}, #{station.lat});"
+    - else
+      - @stations.each do |station|
+        = "ellipse(#{station.lon-1.5}, #{station.lat-1.5}, 3, 3);"
+      - @rails.each do |rail|
+        = "line(#{rail[:from_s].lon},#{rail[:from_s].lat},#{rail[:to_s].lon},#{rail[:to_s].lat})"
     }
   %script{:type => 'text/javascript'}
     = "window.onload = function(){init('#{@kind}');};"
