--- a/views/rails.haml
+++ b/views/rails.haml
@@ -11,12 +11,132 @@
   %div{:id => 'legend'}
 
 %div{"class" => 'subway-map',
-     "data-columns" => "800",
+     "data-columns" => "850",
      "data-rows" => "600",
      "data-cellSize" => "1",
      "data-legendId" => "legend",
      "data-textClass" => "text",
-     "data-lineWidth" => "4"}
+     "data-lineWidth" => "3"}
+  %ul{"data-color" => "#e85298",
+      "data-label" => "Toei Asakusa Line"}
+    %li{"data-coords" => "188.6, 524.1"}
+    %li{"data-coords" => "241.2, 524.1"}
+    %li{"data-coords" => "249.8, 520.6"}
+    %li{"data-coords" => "290.5, 479.9"}
+    %li{"data-coords" => "299.0, 476.4"}
+    %li{"data-coords" => "331.0, 476.4"}
+    %li{"data-coords" => "336.0, 471.4"}
+    %li{"data-coords" => "336.0, 460.5"}
+    %li{"data-coords" => "339.5, 451.9"}
+    %li{"data-coords" => "345.0, 446.4"}
+    %li{"data-coords" => "353.5, 442.9"}
+    %li{"data-coords" => "554.5, 442.9"}
+    %li{"data-coords" => "559.5, 437.9"}
+    %li{"data-coords" => "559.5, 240.2"}
+    %li{"data-coords" => "564.5, 235.2"}
+    %li{"data-coords" => "659.3, 235.2"}
+  %ul{"data-color" => "#6cbb5a",
+      "data-label" => "Toei Shinjuku Line"}
+    %li{"data-coords" => "150.1, 281.7"}
+    %li{"data-coords" => "190.8, 281.7"}
+    %li{"data-coords" => "199.4, 285.2"}
+    %li{"data-coords" => "232.0, 317.8"}
+    %li{"data-coords" => "240.5, 321.4"}
+    %li{"data-coords" => "251.0, 321.4"}
+    %li{"data-coords" => "259.5, 317.8"}
+    %li{"data-coords" => "291.6, 285.8"}
+    %li{"data-coords" => "298.7, 285.8"}
+    %li{"data-coords" => "348.5, 335.6"}
+    %li{"data-coords" => "357.0, 339.1"}
+    %li{"data-coords" => "376.3, 339.1"}
+    %li{"data-coords" => "381.3, 334.1"}
+    %li{"data-coords" => "381.3, 329.5"}
+    %li{"data-coords" => "386.3, 324.5"}
+    %li{"data-coords" => "649.5, 324.5"}
+    %li{"data-coords" => "654.5, 319.5"}
+    %li{"data-coords" => "654.5, 280.6"}
+    %li{"data-coords" => "659.5, 275.6"}
+    %li{"data-coords" => "780.3, 275.6"}
+    %li{"data-coords" => "788.8, 279.1"}
+    %li{"data-coords" => "803.2, 293.5"}
+  %ul{"data-color" => "#0079c2",
+      "data-label" => "Toei Mita Line"}
+    %li{"data-coords" => "243.7, 504.9"}
+    %li{"data-coords" => "274.2, 474.4"}
+    %li{"data-coords" => "282.8, 470.8"}
+    %li{"data-coords" => "345.8, 470.8"}
+    %li{"data-coords" => "354.3, 467.3"}
+    %li{"data-coords" => "411.0, 410.6"}
+    %li{"data-coords" => "419.6, 407.0"}
+    %li{"data-coords" => "428.6, 407.0"}
+    %li{"data-coords" => "433.6, 402.0"}
+    %li{"data-coords" => "433.6, 378.6"}
+    %li{"data-coords" => "430.0, 370.1"}
+    %li{"data-coords" => "402.6, 342.6"}
+    %li{"data-coords" => "399.0, 334.1"}
+    %li{"data-coords" => "399.0, 218.1"}
+    %li{"data-coords" => "404.0, 213.1"}
+    %li{"data-coords" => "421.6, 213.1"}
+    %li{"data-coords" => "423.1, 209.5"}
+    %li{"data-coords" => "399.9, 186.3"}
+    %li{"data-coords" => "391.3, 182.8"}
+    %li{"data-coords" => "324.4, 182.8"}
+    %li{"data-coords" => "319.4, 177.8"}
+    %li{"data-coords" => "319.4, 136.9"}
+    %li{"data-coords" => "315.9, 128.3"}
+    %li{"data-coords" => "269.8, 82.2"}
+    %li{"data-coords" => "261.2, 78.7"}
+    %li{"data-coords" => "194.7, 78.7"}
+    %li{"data-coords" => "186.2, 75.2"}
+    %li{"data-coords" => "138.8, 27.8"}
+  %ul{"data-color" => "#00ada9",
+      "data-label" => "Nanboku Line"}
+    %li{"data-coords" => "237.0, 504.9"}
+    %li{"data-coords" => "305.0, 436.9"}
+    %li{"data-coords" => "308.5, 428.3"}
+    %li{"data-coords" => "308.5, 415.1"}
+    %li{"data-coords" => "305.1, 406.5"}
+    %li{"data-coords" => "258.7, 357.8"}
+    %li{"data-coords" => "255.2, 349.2"}
+    %li{"data-coords" => "255.2, 340.9"}
+    %li{"data-coords" => "258.8, 332.3"}
+    %li{"data-coords" => "287.0, 304.1"}
+    %li{"data-coords" => "295.5, 300.6"}
+    %li{"data-coords" => "403.3, 300.6"}
+    %li{"data-coords" => "408.3, 295.6"}
+    %li{"data-coords" => "408.3, 222.1"}
+    %li{"data-coords" => "413.3, 217.1"}
+    %li{"data-coords" => "423.2, 217.1"}
+    %li{"data-coords" => "428.2, 212.1"}
+    %li{"data-coords" => "428.2, 58.5"}
+  %ul{"data-color" => "#9b7cb6",
+      "data-label" => "Hanzomon Line"}
+    %li{"data-coords" => "175.5, 431.4"}
+    %li{"data-coords" => "278.3, 431.4"}
+    %li{"data-coords" => "286.8, 427.9"}
+    %li{"data-coords" => "334.5, 380.2"}
+    %li{"data-coords" => "338.0, 371.7"}
+    %li{"data-coords" => "338.0, 326.6"}
+    %li{"data-coords" => "343.0, 321.6"}
+    %li{"data-coords" => "348.8, 321.6"}
+    %li{"data-coords" => "357.4, 325.2"}
+    %li{"data-coords" => "372.6, 340.3"}
+    %li{"data-coords" => "381.1, 343.9"}
+    %li{"data-coords" => "414.6, 344.1"}
+    %li{"data-coords" => "423.2, 347.6"}
+    %li{"data-coords" => "450.1, 374.5"}
+    %li{"data-coords" => "458.6, 378.0"}
+    %li{"data-coords" => "460.0, 378.0"}
+    %li{"data-coords" => "465.0, 373.0"}
+    %li{"data-coords" => "465.0, 342.4"}
+    %li{"data-coords" => "470.0, 337.4"}
+    %li{"data-coords" => "602.0, 337.4"}
+    %li{"data-coords" => "610.5, 340.9"}
+    %li{"data-coords" => "630.6, 361.0"}
+    %li{"data-coords" => "639.1, 364.5"}
+    %li{"data-coords" => "654.5, 364.5"}
+    %li{"data-coords" => "659.5, 359.5"}
+    %li{"data-coords" => "659.5, 243.4"}
   %ul{"data-color" => "#9caeb7",
       "data-label" => "Hibiya Line"}
     %li{"data-coords" => "623.5, 144.2"}
@@ -82,10 +202,10 @@
     %li{"data-coords" => "543.9, 421.4"}
     %li{"data-coords" => "550.2, 415.0"}
     %li{"data-coords" => "553.8, 406.5"}
-    %li{"data-coords" => "553.8, 340.3"}
-    %li{"data-coords" => "548.8, 335.3"}
-    %li{"data-coords" => "466.0, 335.3"}
-    %li{"data-coords" => "461.0, 330.3"}
+    %li{"data-coords" => "553.8, 336.3"}
+    %li{"data-coords" => "548.8, 331.3"}
+    %li{"data-coords" => "466.0, 331.3"}
+    %li{"data-coords" => "461.0, 326.3"}
     %li{"data-coords" => "461.0, 247.5"}
     %li{"data-coords" => "466.0, 242.5"}
     %li{"data-coords" => "592.6, 242.5"}
@@ -105,6 +225,52 @@
     %li{"data-coords" => "789.8, 323.2"}
     %li{"data-coords" => "798.4, 319.7"}
     %li{"data-coords" => "804.3, 319.7"}
+  %ul{"data-color" => "#b6007a",
+      "data-label" => "Toei Oedo Line"}
+    %li{"data-coords" => "121.4, 318.1"}
+    %li{"data-coords" => "121.4, 322.9"}
+    %li{"data-coords" => "124.9, 331.2"}
+    %li{"data-coords" => "208.7, 414.9"}
+    %li{"data-coords" => "217.2, 418.4"}
+    %li{"data-coords" => "222.7, 418.4"}
+    %li{"data-coords" => "227.7, 423.4"}
+    %li{"data-coords" => "227.7, 452.1"}
+    %li{"data-coords" => "232.7, 457.1"}
+    %li{"data-coords" => "416.0, 457.1"}
+    %li{"data-coords" => "424.5, 460.7"}
+    %li{"data-coords" => "444.8, 480.9"}
+    %li{"data-coords" => "453.3, 484.5"}
+    %li{"data-coords" => "643.1, 484.5"}
+    %li{"data-coords" => "648.1, 479.5"}
+    %li{"data-coords" => "648.1, 332.7"}
+    %li{"data-coords" => "644.6, 324.2"}
+    %li{"data-coords" => "604.5, 284.1"}
+    %li{"data-coords" => "601.0, 275.6"}
+    %li{"data-coords" => "601.0, 259.6"}
+    %li{"data-coords" => "596.0, 254.6"}
+    %li{"data-coords" => "449.9, 254.6"}
+    %li{"data-coords" => "444.9, 249.6"}
+    %li{"data-coords" => "444.9, 226.6"}
+    %li{"data-coords" => "439.9, 221.6"}
+    %li{"data-coords" => "408.7, 221.6"}
+    %li{"data-coords" => "403.7, 226.6"}
+    %li{"data-coords" => "403.7, 291.6"}
+    %li{"data-coords" => "398.7, 296.6"}
+    %li{"data-coords" => "354.0, 296.6"}
+    %li{"data-coords" => "345.5, 293.1"}
+    %li{"data-coords" => "311.5, 260.1"}
+    %li{"data-coords" => "303.0, 256.6"}
+    %li{"data-coords" => "202.7, 256.6"}
+    %li{"data-coords" => "194.2, 260.1"}
+    %li{"data-coords" => "139.7, 314.6"}
+    %li{"data-coords" => "131.2, 318.1"}
+    %li{"data-coords" => "102.9, 318.1"}
+    %li{"data-coords" => "97.9, 313.1"}
+    %li{"data-coords" => "97.9, 212.3"}
+    %li{"data-coords" => "94.4, 203.7"}
+    %li{"data-coords" => "66.4, 175.7"}
+    %li{"data-coords" => "57.8, 172.2"}
+    %li{"data-coords" => "49.3, 172.2"}
   %ul{"data-color" => "#e60012",
       "data-label" => "Marunouchi Line"}
     %li{"data-coords" => "0.0, 307.7"}
@@ -166,7 +332,7 @@
     %li{"data-coords" => "688.0, 457.7"}
     %li{"data-coords" => "693.0, 452.7"}
     %li{"data-coords" => "693.0, 419.8"}
-  %ul{"data-color" => "#bb641d",
+  %ul{"data-color" => "#9caeb7",
       "data-label" => "Fukutoshin Line"}
     %li{"data-coords" => "25.0, 22.1"}
     %li{"data-coords" => "220.4, 217.5"}
@@ -178,3 +344,214 @@
     %li{"data-coords" => "189.7, 417.4"}
     %li{"data-coords" => "181.1, 420.9"}
     %li{"data-coords" => "177.5, 424.6"}
+  %ul{"data-color" => "#FF4500",
+      "data-label" => "JR Musashino Line"}
+    %li{"data-coords" => "804.3, 372.2"}
+    %li{"data-coords" => "804.3, 115.9"}
+    %li{"data-coords" => "800.8, 107.4"}
+    %li{"data-coords" => "713.5, 20.1"}
+  %ul{"data-color" => "#FF4500",
+      "data-label" => "JR Musashino Line"}
+    %li{"data-coords" => "494.5, 360.9"}
+    %li{"data-coords" => "590.4, 360.9"}
+    %li{"data-coords" => "598.9, 364.5"}
+    %li{"data-coords" => "646.0, 411.5"}
+    %li{"data-coords" => "654.5, 415.1"}
+    %li{"data-coords" => "753.8, 415.1"}
+    %li{"data-coords" => "762.3, 411.5"}
+    %li{"data-coords" => "800.2, 373.6"}
+    %li{"data-coords" => "807.3, 373.6"}
+    %li{"data-coords" => "844.9, 411.2"}
+  %ul{"data-color" => "#00B261",
+      "data-label" => "JR Joban Chiyoda Line"}
+    %li{"data-coords" => "684.0, 134.3"}
+    %li{"data-coords" => "839.7, 134.3"}
+  %ul{"data-color" => "#000080",
+      "data-label" => "JR Yokosuka Line"}
+    %li{"data-coords" => "144.8, 644.2"}
+    %li{"data-coords" => "144.8, 550.7"}
+    %li{"data-coords" => "149.8, 545.7"}
+    %li{"data-coords" => "383.9, 545.7"}
+    %li{"data-coords" => "388.9, 540.7"}
+    %li{"data-coords" => "388.9, 530.7"}
+    %li{"data-coords" => "392.4, 522.2"}
+    %li{"data-coords" => "509.2, 405.4"}
+    %li{"data-coords" => "512.7, 396.9"}
+    %li{"data-coords" => "512.7, 350.9"}
+    %li{"data-coords" => "517.7, 345.9"}
+    %li{"data-coords" => "587.4, 345.9"}
+    %li{"data-coords" => "595.9, 342.3"}
+    %li{"data-coords" => "633.4, 304.9"}
+    %li{"data-coords" => "641.9, 301.4"}
+    %li{"data-coords" => "747.1, 301.4"}
+    %li{"data-coords" => "755.7, 304.9"}
+    %li{"data-coords" => "786.0, 335.2"}
+    %li{"data-coords" => "794.5, 338.8"}
+    %li{"data-coords" => "831.3, 338.8"}
+  %ul{"data-color" => "#F68B1E",
+      "data-label" => "JR Tokaido Line"}
+    %li{"data-coords" => "503.2, 360.9"}
+    %li{"data-coords" => "503.2, 392.2"}
+    %li{"data-coords" => "499.7, 400.8"}
+    %li{"data-coords" => "382.1, 518.4"}
+    %li{"data-coords" => "378.6, 526.9"}
+    %li{"data-coords" => "378.6, 558.5"}
+    %li{"data-coords" => "375.0, 567.0"}
+    %li{"data-coords" => "294.7, 647.3"}
+  %ul{"data-color" => "#C9252F",
+      "data-label" => "JR Keiyo Line"}
+    %li{"data-coords" => "490.5, 372.6"}
+    %li{"data-coords" => "587.0, 372.6"}
+    %li{"data-coords" => "595.6, 376.1"}
+    %li{"data-coords" => "640.5, 421.1"}
+    %li{"data-coords" => "649.0, 424.6"}
+    %li{"data-coords" => "759.7, 424.6"}
+    %li{"data-coords" => "768.2, 421.1"}
+    %li{"data-coords" => "800.7, 388.6"}
+    %li{"data-coords" => "807.8, 388.6"}
+    %li{"data-coords" => "834.5, 415.3"}
+  %ul{"data-color" => "#FFD400",
+      "data-label" => "JR Nanbu Line"}
+    %li{"data-coords" => "267.6, 639.5"}
+    %li{"data-coords" => "143.7, 515.7"}
+    %li{"data-coords" => "135.2, 512.1"}
+    %li{"data-coords" => "83.0, 512.1"}
+    %li{"data-coords" => "74.5, 508.6"}
+    %li{"data-coords" => "14.8, 448.9"}
+  %ul{"data-color" => "#FFD400",
+      "data-label" => "JR Sobu Line"}
+    %li{"data-coords" => "11.0, 297.5"}
+    %li{"data-coords" => "181.1, 297.5"}
+    %li{"data-coords" => "186.1, 302.5"}
+    %li{"data-coords" => "186.1, 349.7"}
+    %li{"data-coords" => "191.1, 354.7"}
+    %li{"data-coords" => "270.7, 354.7"}
+    %li{"data-coords" => "279.3, 351.1"}
+    %li{"data-coords" => "335.4, 295.0"}
+    %li{"data-coords" => "344.0, 291.4"}
+    %li{"data-coords" => "457.7, 291.4"}
+    %li{"data-coords" => "467.7, 291.4"}
+    %li{"data-coords" => "490.3, 291.4"}
+    %li{"data-coords" => "500.3, 291.4"}
+    %li{"data-coords" => "751.5, 291.8"}
+    %li{"data-coords" => "760.1, 295.4"}
+    %li{"data-coords" => "791.0, 326.2"}
+    %li{"data-coords" => "799.5, 329.7"}
+    %li{"data-coords" => "836.6, 329.7"}
+  %ul{"data-color" => "#F15A22",
+      "data-label" => "JR Chuo Line"}
+    %li{"data-coords" => "10.7, 287.3"}
+    %li{"data-coords" => "190.1, 287.3"}
+    %li{"data-coords" => "195.1, 292.3"}
+    %li{"data-coords" => "195.1, 340.0"}
+    %li{"data-coords" => "200.1, 345.0"}
+    %li{"data-coords" => "264.8, 345.0"}
+    %li{"data-coords" => "273.3, 341.5"}
+    %li{"data-coords" => "329.9, 284.9"}
+    %li{"data-coords" => "338.5, 281.4"}
+    %li{"data-coords" => "434.4, 281.4"}
+    %li{"data-coords" => "442.9, 284.9"}
+    %li{"data-coords" => "469.4, 311.4"}
+    %li{"data-coords" => "472.9, 319.9"}
+    %li{"data-coords" => "472.9, 355.9"}
+    %li{"data-coords" => "477.9, 360.9"}
+    %li{"data-coords" => "497.2, 360.9"}
+  %ul{"data-color" => "#FF0000",
+      "data-label" => "JR Shonan Shinjuku Line"}
+    %li{"data-coords" => "239.2, 20.4"}
+    %li{"data-coords" => "340.4, 121.6"}
+    %li{"data-coords" => "344.0, 130.2"}
+    %li{"data-coords" => "344.0, 157.0"}
+    %li{"data-coords" => "339.0, 162.0"}
+    %li{"data-coords" => "257.4, 162.0"}
+    %li{"data-coords" => "248.9, 165.5"}
+    %li{"data-coords" => "180.2, 234.2"}
+    %li{"data-coords" => "176.7, 242.7"}
+    %li{"data-coords" => "176.7, 448.0"}
+    %li{"data-coords" => "180.2, 456.5"}
+    %li{"data-coords" => "214.2, 491.3"}
+    %li{"data-coords" => "222.7, 494.9"}
+    %li{"data-coords" => "332.3, 494.9"}
+    %li{"data-coords" => "337.3, 499.9"}
+    %li{"data-coords" => "337.3, 530.0"}
+    %li{"data-coords" => "332.3, 535.0"}
+    %li{"data-coords" => "139.0, 535.0"}
+    %li{"data-coords" => "134.0, 540.0"}
+    %li{"data-coords" => "134.0, 647.6"}
+  %ul{"data-color" => "#FFA500",
+      "data-label" => "JR Utsunomiya Line"}
+    %li{"data-coords" => "524.9, 242.8"}
+    %li{"data-coords" => "524.9, 175.8"}
+    %li{"data-coords" => "521.3, 167.2"}
+    %li{"data-coords" => "481.7, 127.8"}
+    %li{"data-coords" => "473.2, 124.3"}
+    %li{"data-coords" => "376.7, 124.3"}
+    %li{"data-coords" => "368.1, 120.7"}
+    %li{"data-coords" => "248.8, 1.4"}
+  %ul{"data-color" => "#00B261",
+      "data-label" => "JR Joban Kaisoku Line"}
+    %li{"data-coords" => "514.4, 233.3"}
+    %li{"data-coords" => "514.4, 189.1"}
+    %li{"data-coords" => "517.9, 180.6"}
+    %li{"data-coords" => "541.1, 157.4"}
+    %li{"data-coords" => "549.6, 153.8"}
+    %li{"data-coords" => "840.0, 153.8"}
+  %ul{"data-color" => "#00B261",
+      "data-label" => "JR Joban Line"}
+    %li{"data-coords" => "503.8, 233.3"}
+    %li{"data-coords" => "503.8, 185.9"}
+    %li{"data-coords" => "507.4, 177.4"}
+    %li{"data-coords" => "537.0, 147.7"}
+    %li{"data-coords" => "545.5, 144.2"}
+    %li{"data-coords" => "839.7, 144.2"}
+  %ul{"data-color" => "#00B2E5",
+      "data-label" => "JR Keihin Tohoku Line"}
+    %li{"data-coords" => "250.1, 16.9"}
+    %li{"data-coords" => "374.5, 141.2"}
+    %li{"data-coords" => "383.0, 144.7"}
+    %li{"data-coords" => "454.3, 144.7"}
+    %li{"data-coords" => "462.8, 148.2"}
+    %li{"data-coords" => "489.8, 175.2"}
+    %li{"data-coords" => "493.3, 183.7"}
+    %li{"data-coords" => "493.3, 387.3"}
+    %li{"data-coords" => "489.8, 395.8"}
+    %li{"data-coords" => "372.5, 513.1"}
+    %li{"data-coords" => "368.9, 521.7"}
+    %li{"data-coords" => "368.9, 553.9"}
+    %li{"data-coords" => "365.4, 562.4"}
+    %li{"data-coords" => "286.5, 641.3"}
+  %ul{"data-color" => "#00b48d",
+      "data-label" => "JR Saikyo Line"}
+    %li{"data-coords" => "146.9, 20.7"}
+    %li{"data-coords" => "191.3, 65.1"}
+    %li{"data-coords" => "199.9, 68.7"}
+    %li{"data-coords" => "269.0, 68.7"}
+    %li{"data-coords" => "277.5, 72.2"}
+    %li{"data-coords" => "291.6, 86.3"}
+    %li{"data-coords" => "291.6, 93.4"}
+    %li{"data-coords" => "160.8, 224.2"}
+    %li{"data-coords" => "157.2, 232.7"}
+    %li{"data-coords" => "157.2, 458.8"}
+    %li{"data-coords" => "160.8, 467.4"}
+    %li{"data-coords" => "204.9, 511.6"}
+    %li{"data-coords" => "213.5, 515.1"}
+    %li{"data-coords" => "307.0, 515.1"}
+  %ul{"data-color" => "#80c241",
+      "data-label" => "JR Yamanote Line"}
+    %li{"data-coords" => "454.9, 156.4"}
+    %li{"data-coords" => "446.4, 152.8"}
+    %li{"data-coords" => "251.6, 152.8"}
+    %li{"data-coords" => "243.1, 156.4"}
+    %li{"data-coords" => "170.5, 229.0"}
+    %li{"data-coords" => "166.9, 237.5"}
+    %li{"data-coords" => "166.9, 454.4"}
+    %li{"data-coords" => "170.5, 463.0"}
+    %li{"data-coords" => "208.9, 501.4"}
+    %li{"data-coords" => "217.4, 504.9"}
+    %li{"data-coords" => "361.2, 504.9"}
+    %li{"data-coords" => "369.7, 501.4"}
+    %li{"data-coords" => "479.3, 391.8"}
+    %li{"data-coords" => "482.8, 383.3"}
+    %li{"data-coords" => "482.8, 189.3"}
+    %li{"data-coords" => "479.3, 180.7"}
+    %li{"data-coords" => "454.9, 156.4"}
