--- a/views/field.haml
+++ b/views/field.haml
@@ -1,15 +1,13 @@
 - content_for :title do
-  %title= title_with_name('feild')
-- content_for :leftbar do
-  %p please push to locate
+  %title
+    what is necessary for you? @cowplace
+- content_for :header do
+  = stylesheet_link_tag 'positioning'
 - content_for :scripts do
-  = javascript_include_tag 'processing'
   = javascript_include_tag 'excanvas'
-  = javascript_include_tag 'processing_init'
-  %script{:id => @kind, :type => 'application/processing'}
-    = `cat views/processing/#{@kind}.processing`
-  %script{:type => 'text/javascript'}
-    = "window.onload = function(){init('#{@kind}');};"
-  
+  = javascript_include_tag 'positioning'
 
-%div{:id => 'stage'}
+%div{:id => 'content'}
+- @nodes.each do |node|
+  %div{:class => 'item'}
+    %span= node
