--- a/views/multi_layers.haml
+++ b/views/multi_layers.haml
@@ -5,7 +5,7 @@
 - unless @kind.nil? then
   - content_for :scripts do
     = javascript_include_tag 'excanvas'
-    = javascript_include_tag @kind
+    = javascript_include_tag "multi_layers/#{@kind}"
 
 - content_for :leftbar do
   %p please push to start
