--- a/views/autonomous.haml
+++ b/views/autonomous.haml
@@ -2,9 +2,17 @@
   %title= title_with_name('autonomous')
 - content_for :header do
   = stylesheet_link_tag 'positioning'
-- content_for :scripts do
-  = javascript_include_tag 'autonomous'
+- unless @kind.nil? then
+  - content_for :scripts do
+    = javascript_include_tag "autonomous/#{@kind}"
 
 - content_for :leftbar do
-  %p mouse stalker
-%div{:id => 'content'}
+  %p please select activitiy
+  %div
+    %ul
+      - @kinds.each do |kind|
+        %li
+          %a{:href => "/autonomous/#{kind}"}= kind
+
+- unless @kind.nil? then
+  %div{:id => 'content'}
