--- a/views/autonomous.haml
+++ b/views/autonomous.haml
@@ -7,7 +7,7 @@
     = javascript_include_tag "autonomous/#{@kind}"
 
 - content_for :leftbar do
-  %p please select activitiy
+  %p please select activity
   %div
     %ul
       - @kinds.each do |kind|
