--- a/views/maze.haml
+++ b/views/maze.haml
@@ -3,6 +3,6 @@
 - content_for :header do
   = stylesheet_link_tag 'maze'
 - content_for :scripts do
-  = javascript_include_tag 'maze/basic'
+  = javascript_include_tag 'maze/tunnel'
 
 #content
