--- a/views/sass/sort.sass
+++ b/views/sass/sort.sass
@@ -1,6 +1,8 @@
 #main
+  :width 800px
+  :height 600px
   .bar
-    :height 3pt
+    :height 1pt
     :font-size 1pt
     :background-color gray
     :margin 1px
@@ -9,3 +11,6 @@
     :background-color red
   .comp
     :background-color blue
+  .monitor
+    :float left
+    :margin 5px
