--- a/views/sass/common.sass
+++ b/views/sass/common.sass
@@ -1,14 +1,3 @@
-.navi
-  :clear both
-
 #footer
-  :border-top 1px solid black
+  :border-top 1px solid gray
   :text-align right
-
-#wrapper, #leftbar
-  :_height 450px
-  :min-height 450px
-  :float left
-
-#leftbar
-  :width 25%
